--- a/public/index.html
+++ b/public/index.html
@@ -370,7 +370,7 @@ header .centered img.logo{ height: 46px !important; }
     return 'https://smartel.netlify.app' + REL;
   }
 </script>
-
+<script>
   /* === 서버에 PDF 생성 요청 === */
   async function generatePDFBlob() {
     const form = document.getElementById('form');
